--- a/style.css
+++ b/style.css
@@ -17,13 +17,12 @@ nav{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 20px;
+    align-items: center;
+    padding: 0 20px;
     background-image: radial-gradient(rgb(20, 20, 20,0.7),rgb(19, 18, 18,0.7))!important;
 }
-.logo h1{
-    color: rgb(202, 72, 72);
-    text-transform: uppercase;
-    font-size: 30px;
+.logo img{
+    width: 120px;    
 }
 .nav_btns select{
     padding: 10px;
